--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -1,15 +1,12 @@
-streamlit==1.44.0
-pandas==2.1.4
-numpy==1.26.3
-plotly==6.0.0
-requests==2.31.0
-python-dotenv==1.0.0
-yfinance==0.2.36
-matplotlib==3.8.2
-ccxt==4.1.22
-nltk==3.8.1
-scikit-learn==1.3.2
-torch==2.1.2
-stockstats==0.5.4
-alpaca-trade-api==3.0.1
-python-dateutil==2.8.2
+streamlit>=1.24.0
+pandas>=1.5.3
+numpy>=1.23.5
+plotly>=5.14.0
+requests>=2.28.2
+python-dotenv>=1.0.0
+yfinance>=0.2.18
+matplotlib>=3.7.1
+nltk>=3.8.1
+scikit-learn>=1.2.2
+alpaca-trade-api>=3.0.0
+python-dateutil>=2.8.2
